# V8EngineAndroidApp

./: .gitignore  README.md  README_SERVER.md  TESTING.md  build_quickjs.sh  get_ip.sh  js_server.js  local.properties  run_tests.sh  run_working_tests.sh  settings.gradle.kts  start_server.sh  test_cache_system_fast.js  test_demo.md  test_fetch_polyfill.js  test_remote_script.js  test_simple_return.js
app/: build.gradle.kts
app/src/androidTest/java/com/visgupta/example/v8integrationandroidapp/: CacheIntegrationTest.kt  CachePerformanceTest.kt  ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  bytetransfer.cpp  quickjs_integration.cpp  v8integration.cpp
app/src/main/cpp/quickjs/: README.md  quickjs-2025-04-26.tar.xz
app/src/main/cpp/v8/include/: README.md
app/src/main/cpp/v8/lib/: README.md
app/src/main/java/com/visgupta/example/v8integrationandroidapp/: BufferInfo.kt  ByteTransferBridge.kt  CacheService.kt  ErrorHandler.kt  HttpService.kt  MainActivity.kt  NetworkService.kt  QuickJSBridge.kt  V8Bridge.kt
app/src/main/java/com/visgupta/example/v8integrationandroidapp/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/visgupta/example/v8integrationandroidapp/: CacheServiceTest.kt  ExampleUnitTest.kt  HttpServiceTest.kt  QuickJSBridgeTest.kt  SimpleUtilsTest.kt
docs/testing/: FINAL_TEST_STATUS.md  HOW_TO_RUN_TESTS.md  INTEGRATION_TEST_STATUS.md  UNIT_TEST_STATUS.md
gradle/wrapper/: gradle-wrapper.properties
scripts/: start_test_server.sh
test-server/: simple_fetch_test.js  test_bytecode_demo.js  test_cache_stats.js  test_cache_system.js  test_cache_system_fast.js  test_fetch_polyfill.js  test_remote_script.js
